# PaddleOCR

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  __init__.py  paddleocr.py  pyproject.toml  requirements.txt  requirements_all.txt
.github/workflows/: codestyle.yml  python-publish.yml  tests.yaml
doc/doc_en/: FAQ_en.md  add_new_algorithm_en.md  algorithm_det_sast_en.md  algorithm_e2e_pgnet_en.md  algorithm_kie_layoutxlm_en.md  algorithm_kie_vi_layoutxlm_en.md  algorithm_overview_en.md  algorithm_rec_abinet_en.md  algorithm_rec_cppd_en.md  algorithm_rec_nrtr_en.md  algorithm_rec_rfl_en.md  algorithm_rec_svtr_en.md  algorithm_rec_visionlan_en.md  algorithm_rec_vitstr_en.md  algorithm_table_master_en.md  angle_class_en.md  benchmark_en.md  code_and_doc.md  community_contribution_en.md  config_en.md  customize_en.md  data_annotation_en.md  detection_en.md  distributed_training_en.md  finetune_en.md  inference_en.md  inference_ppocr_en.md  installation_en.md  kie_en.md  knowledge_distillation_en.md  logging_en.md  models_list_en.md  ocr_book_en.md  quickstart_en.md  recognition_en.md  slice_en.md  table_recognition_en.md  tree_en.md  update_en.md  whl_en.md
docs/: FAQ.en.md  index.en.md  quick_start.en.md  update.en.md
docs/algorithm/: add_new_algorithm.en.md  add_new_algorithm.md  overview.en.md  overview.md
docs/data_anno_synth/: data_annotation.en.md  data_annotation.md  data_synthesis.en.md  overview.md
docs/ppocr/: environment.en.md  environment.md  (+7 more)
paddleocr/: __init__.py  _cli.py
tests/: test_cls_postprocess.py  test_paddleocr_api.py
(+165 files in other folders)
